# product-automation-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  config.py  db.py  main.py
app/adapters/: __init__.py
app/api/: auth.py  dependencies.py  miniapp.html  routes_intake.py  routes_miniapp.py  routes_products.py  routes_review.py  routes_telegram.py  store.py
app/domain/: __init__.py  extraction.py  product_candidate.py  publication.py
app/ports/: llm_provider.py  ms_client.py  site_client.py
app/tasks/: __init__.py  celery_app.py  pipeline_tasks.py
app/workflow/: __init__.py  engine.py  states.py  transitions.py
docs/: architecture.md  integrations.md  openrouter.md  telegram.md
docs/runbooks/: staging.md
examples/: sample_supplier_products.csv
migrations/: env.py
migrations/versions/: 20260608_0001_initial.py  20260608_0002_reviews_jobs.py  20260608_0003_intake_events.py
scripts/: dry_run_pipeline.py  dump_bitrix_properties.py  dump_ms_attributes.py
tests/unit/: helpers.py  test_api.py  test_business_rules.py  test_dry_run_cli.py  test_duplicates.py  test_external_mappers.py  test_extraction_contract.py  test_extraction_service.py  test_http_clients.py  test_image_processing.py  test_ingestion.py  test_intake.py  test_intake_api.py  test_miniapp_api.py  test_miniapp_workflow_api.py  test_ms_only_publication_mode.py  test_naming_and_validation.py  test_openrouter_provider.py  test_pipeline_orchestrator.py  test_pipeline_tasks.py  (+9 more)
(+35 files in other folders)
